# ior-pydantic

./: LICENSE  README.md
pkg/: pyproject.toml
pkg/src/iorpyd/: __init__.py
test/: result.json
